--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "repository": "https://github.com/Samuelasare85/LogisticsAppBackend.git",
   "author": "SamuelAsare <samuel.asare@amalitech.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "bcrypt": "^5.1.0",
+    "crypto": "^1.0.1",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -16,7 +20,9 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^5.7.0",
+    "node-geocoder": "^4.2.0",
     "prisma": "^5.1.1",
+    "redis": "^4.6.8",
     "yup": "^1.2.0"
   },
   "devDependencies": {
