--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.1.1",
     "bcrypt": "^5.1.0",
     "crypto": "^1.0.1",
+    "crypto-ts": "^1.0.2",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
