--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     container_name: logistics-app-backend
     ports: 
       - "3000:3000"
-    environment:
-      - REDIS_URL=127.0.0.1:6379
+    depends_on:
+      - redis_server
 
-  # redis_server:
-  #   image: redis/redis-stack-server:latest
-  #   ports:
-  #     - "6379:6379"
+  redis_server:
+    image: redis/redis-stack-server:latest
+    ports:
+      - "6379:6379"
