--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-ts": "^1.0.2",
     "debug": "^4.3.4",
