--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.4",
     "mongodb": "^5.7.0",
     "node-geocoder": "^4.2.0",
+    "nodemon": "^3.0.1",
     "prisma": "^5.1.1",
     "redis": "^4.6.8",
     "yup": "^1.2.0"
