--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "@sentry/node": "^7.72.0",
+    "@sentry/profiling-node": "^1.2.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "crypto-ts": "^1.0.2",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
@@ -25,6 +28,7 @@
     "moment": "^2.29.4",
     "mongodb": "^5.7.0",
     "node-geocoder": "^4.2.0",
+    "nodemailer": "^6.9.5",
     "prisma": "^5.1.1",
     "redis": "^4.6.8",
     "yup": "^1.2.0"
