--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "author": "Samuel Asare",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "generate": "npx prisma generate --no-engine"
   },
   "engines": {
     "node": ">=15 <=21"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "5.8.0",
+    "@prisma/extension-accelerate": "^0.6.3",
     "@sentry/node": "^7.72.0",
     "@sentry/profiling-node": "^1.2.1",
     "bcrypt": "^5.1.0",
