--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon server.js",
-    "generate": "npx prisma generate --no-engine"
+    "generate": "npx prisma generate"
   },
   "engines": {
     "node": ">=15 <=21"
   },
   "dependencies": {
     "@prisma/client": "5.8.0",
-    "@prisma/extension-accelerate": "^0.6.3",
     "@sentry/node": "^7.72.0",
     "@sentry/profiling-node": "^1.2.1",
     "bcrypt": "^5.1.0",
@@ -33,6 +32,7 @@
     "nodemailer": "^6.9.5",
     "prisma": "^5.8.0",
     "redis": "^4.6.8",
+    "sanitize-html": "^2.11.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
