--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "generate": "npx prisma generate"
   },
   "engines": {
-    "node": ">=15 <=21"
+    "node": ">=16 <=21"
   },
   "dependencies": {
     "@prisma/client": "5.8.0",
@@ -28,7 +28,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^5.7.0",
-    "node-geocoder": "^4.2.0",
+    "node-geocoder": "4.2.0",
     "nodemailer": "^6.9.5",
     "prisma": "^5.8.0",
     "redis": "^4.6.8",
